--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ exclude = [".github/"]
 members = [
     "bin/reth-bench/",
     "bin/reth-bench-compare/",
+    "bin/reth-scraper/",
     "bin/reth/",
     "crates/storage/rpc-provider/",
     "crates/chain-state/",
