--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -20,57 +20,43 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v6
-
       - name: Install bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: v1.2.23
-
-      - name: Install Playwright browsers
-        # Required for rehype-mermaid to render Mermaid diagrams during build
+          bun-version: v1.3.4
+      - name: Install dependencies
         run: |
           cd docs/vocs/
           bun i
+          # Required for rehype-mermaid to render Mermaid diagrams during build
           npx playwright install --with-deps chromium
-
-      - name: Install Rust nightly
-        uses: dtolnay/rust-toolchain@nightly
-
+      - uses: dtolnay/rust-toolchain@nightly
       - uses: mozilla-actions/sccache-action@v0.0.9
-
-      - name: Build docs
-        run: cd docs/vocs && bash scripts/build-cargo-docs.sh
-
+      - uses: Swatinem/rust-cache@v2
+        with:
+          cache-on-failure: true
       - name: Build Vocs
-        run: |
-          cd docs/vocs/ && bun run build
-          echo "Vocs Build Complete"
-
+        run: cd docs/vocs/ && bun run build
       - name: Setup Pages
+        if: github.ref_name == 'main' && github.event_name == 'push'
         uses: actions/configure-pages@v5
-
       - name: Upload artifact
+        if: github.ref_name == 'main' && github.event_name == 'push'
         uses: actions/upload-pages-artifact@v4
         with:
           path: "./docs/vocs/docs/dist"
 
   deploy:
-    # Only deploy if a push to main
     if: github.ref_name == 'main' && github.event_name == 'push'
     runs-on: ubuntu-latest
     needs: [build]
-
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
       pages: write
       id-token: write
-
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
     timeout-minutes: 60
-
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
