--- a/crates/exex/exex/Cargo.toml
+++ b/crates/exex/exex/Cargo.toml
@@ -77,6 +77,7 @@ serde = [
     "rand/serde",
     "secp256k1/serde",
     "reth-primitives-traits/serde",
+    "reth-trie-common/serde",
     "reth-prune-types/serde",
     "reth-config/serde",
     "reth-ethereum-primitives/serde",
