--- a/crates/chain-state/Cargo.toml
+++ b/crates/chain-state/Cargo.toml
@@ -21,7 +21,6 @@ reth-ethereum-primitives.workspace = true
 reth-primitives-traits.workspace = true
 reth-storage-api.workspace = true
 reth-trie.workspace = true
-reth-trie-db.workspace = true
 
 # ethereum
 alloy-eips.workspace = true
@@ -48,6 +47,7 @@ serde = { workspace = true, optional = true }
 alloy-signer = { workspace = true, optional = true }
 alloy-signer-local = { workspace = true, optional = true }
 rand = { workspace = true, optional = true }
+reth-trie-db = { workspace = true, optional = true }
 
 [dev-dependencies]
 reth-primitives-traits = { workspace = true, features = ["test-utils"] }
@@ -71,7 +71,7 @@ serde = [
     "reth-execution-types/serde",
     "reth-primitives-traits/serde",
     "reth-trie/serde",
-    "reth-trie-db/serde",
+    "reth-trie-db?/serde",
     "revm-database/serde",
     "revm-state?/serde",
     "reth-storage-api/serde",
@@ -86,6 +86,9 @@ test-utils = [
     "reth-primitives-traits/test-utils",
     "reth-trie/test-utils",
     "reth-ethereum-primitives/test-utils",
+    "reth-trie-db",
+    "reth-provider/test-utils",
+    "reth-trie-db?/test-utils",
 ]
 
 [[bench]]
