--- a/Cargo.toml
+++ b/Cargo.toml
@@ -481,7 +481,7 @@ revm-primitives = { version = "21.0.2", default-features = false }
 revm-interpreter = { version = "31.1.0", default-features = false }
 revm-database-interface = { version = "8.0.5", default-features = false }
 op-revm = { version = "14.1.0", default-features = false }
-revm-inspectors = "0.33.1"
+revm-inspectors = "0.33.2"
 
 # eth
 
@@ -489,7 +489,7 @@ alloy-primitives = { version = "1.4.1", default-features = false, features = ["m
 alloy-chains = { version = "0.2.5", default-features = false }
 alloy-evm = { version = "0.25.2", default-features = false }
 alloy-dyn-abi = "1.4.1"
-alloy-eip7928 = { version = "0.2.0", default-features = false, git = "https://github.com/Rimeeeeee/eips.git", branch = "more-u256" }
+alloy-eip7928 = { version = "0.2.0", default-features = false, git = "https://github.com/rakita/alloy-eips.git", rev = "734beaf" }
 alloy-eip2124 = { version = "0.2.0", default-features = false }
 alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net"] }
 alloy-sol-macro = "1.4.1"
@@ -777,21 +777,20 @@ alloy-transport-ws = { git = "https://github.com/Soubhik-10/alloy", branch = "ba
 # op-alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/op-alloy", rev = "a79d6fc" }
 # op-alloy-rpc-jsonrpsee = { git = "https://github.com/alloy-rs/op-alloy", rev = "a79d6fc" }
 #
-# revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", rev = "1207e33" }
-# need to change to bluealloy rakita/bal
-revm = { git = "https://github.com/Rimeeeeee/revm", branch = "bal-devnet" }
+revm-inspectors = { git = "https://github.com/Rimeeeeee/revm-inspectors", branch = "bal-devnet-1" }
+revm = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
 alloy-evm = { git = "https://github.com/Rimeeeeee/evm", branch = "bal-devnet-1" }
 alloy-op-evm = { git = "https://github.com/Rimeeeeee/evm", branch = "bal-devnet-1" }
-revm-bytecode = { git = "https://github.com/Rimeeeeee/revm", branch = "bal-devnet" }
-revm-database = { git = "https://github.com/Rimeeeeee/revm", branch = "bal-devnet" }
-revm-state = { git = "https://github.com/Rimeeeeee/revm", branch = "bal-devnet" }
-revm-primitives = { git = "https://github.com/Rimeeeeee/revm", branch = "bal-devnet" }
-revm-interpreter = { git = "https://github.com/Rimeeeeee/revm", branch = "bal-devnet" }
-revm-inspector = { git = "https://github.com/Rimeeeeee/revm", branch = "bal-devnet" }
-revm-context = { git = "https://github.com/Rimeeeeee/revm", branch = "bal-devnet" }
-revm-context-interface = { git = "https://github.com/Rimeeeeee/revm", branch = "bal-devnet" }
-revm-database-interface = { git = "https://github.com/Rimeeeeee/revm", branch = "bal-devnet" }
-op-revm = { git = "https://github.com/Rimeeeeee/revm", branch = "bal-devnet" }
+revm-bytecode = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
+revm-database = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
+revm-state = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
+revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
+revm-interpreter = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
+revm-inspector = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
+revm-context = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
+revm-context-interface = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
+revm-database-interface = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
+op-revm = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
 #
 # jsonrpsee = { git = "https://github.com/paradigmxyz/jsonrpsee", branch = "matt/make-rpc-service-pub" }
 # jsonrpsee-core = { git = "https://github.com/paradigmxyz/jsonrpsee", branch = "matt/make-rpc-service-pub" }
