--- a/crates/ethereum/reth/Cargo.toml
+++ b/crates/ethereum/reth/Cargo.toml
@@ -80,7 +80,7 @@ arbitrary = [
     "reth-codecs?/arbitrary",
 ]
 keccak-cache-global = [
-	"reth-node-ethereum?/keccak-cache-global"
+    "reth-node-ethereum?/keccak-cache-global",
 ]
 test-utils = [
     "reth-chainspec/test-utils",
