--- a/crates/optimism/bin/Cargo.toml
+++ b/crates/optimism/bin/Cargo.toml
@@ -41,7 +41,7 @@ tracy-allocator = ["reth-cli-util/tracy-allocator"]
 
 asm-keccak = ["reth-optimism-cli/asm-keccak", "reth-optimism-node/asm-keccak"]
 keccak-cache-global = [
-	"reth-optimism-node/keccak-cache-global"
+    "reth-optimism-node/keccak-cache-global",
 ]
 dev = [
     "reth-optimism-cli/dev",
