feat(txpool): add synchronous pool clearing after FCU success
Add CLI flag --txpool.clear-after-fcu that synchronously clears the
transaction pool when Fork Choice Updated (FCU) returns success.

This feature is designed for private chains where race conditions
between FCU completion and pool state can cause unwanted transactions to
leak into subsequent blocks.

Implementation:
- Dedicated bidirectional channel (PoolClearHandle/PoolClearReceiver)
- Engine tree blocks on clear_and_wait() until pool acknowledges
- 30s timeout prevents indefinite blocking if clearing task fails
- Spawns dedicated async task for pool clearing in engine launch

When disabled (default), no behavior change.

--- a/crates/engine/service/Cargo.toml
+++ b/crates/engine/service/Cargo.toml
@@ -22,6 +22,7 @@ reth-provider.workspace = true
 reth-prune.workspace = true
 reth-stages-api.workspace = true
 reth-tasks.workspace = true
+reth-transaction-pool.workspace = true
 reth-node-types.workspace = true
 reth-chainspec.workspace = true
 reth-engine-primitives.workspace = true
