--- a/crates/engine/tree/Cargo.toml
+++ b/crates/engine/tree/Cargo.toml
@@ -31,6 +31,7 @@ reth-revm.workspace = true
 reth-stages-api.workspace = true
 reth-storage-errors.workspace = true
 reth-tasks.workspace = true
+reth-transaction-pool.workspace = true
 reth-trie-parallel.workspace = true
 reth-trie-sparse = { workspace = true, features = ["std", "metrics"] }
 reth-trie-sparse-parallel = { workspace = true, features = ["std"] }
