chore: add chainstate check on fcu and ws conn retry delay

--- a/crates/optimism/flashblocks/Cargo.toml
+++ b/crates/optimism/flashblocks/Cargo.toml
@@ -23,6 +23,8 @@ reth-optimism-payload-builder.workspace = true
 reth-rpc-eth-types.workspace = true
 reth-errors.workspace = true
 reth-payload-primitives.workspace = true
+reth-chainspec.workspace = true
+reth-provider = { workspace = true, features = ["test-utils"] }
 reth-storage-api.workspace = true
 reth-tasks.workspace = true
 reth-metrics.workspace = true
