--- a/Cargo.toml
+++ b/Cargo.toml
@@ -482,6 +482,7 @@ revm-interpreter = { version = "31.1.0", default-features = false }
 revm-database-interface = { version = "8.0.5", default-features = false }
 op-revm = { version = "14.1.0", default-features = false }
 revm-inspectors = "0.33.2"
+fixed-cache = { git = "https://github.com/danipopes/fixed-cache" }
 
 # eth
 alloy-chains = { version = "0.2.5", default-features = false }
