fix: propagate keccak-cache-global feature to reth-node-core

--- a/bin/reth/Cargo.toml
+++ b/bin/reth/Cargo.toml
@@ -103,6 +103,7 @@ asm-keccak = [
     "reth-node-ethereum/asm-keccak",
 ]
 keccak-cache-global = [
+    "reth-node-core/keccak-cache-global",
     "reth-node-ethereum/keccak-cache-global",
 ]
 jemalloc = [
