--- a/crates/engine/tree/Cargo.toml
+++ b/crates/engine/tree/Cargo.toml
@@ -54,6 +54,7 @@ thiserror.workspace = true
 tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "macros"] }
 mini-moka = { workspace = true, features = ["sync"] }
 moka = { workspace = true, features = ["sync"] }
+fixed-cache = { workspace = true, features = ["stats"] }
 smallvec.workspace = true
 
 # metrics
