feat(cli): add tracing-samply
Integrates tracing-samply for profiling with span markers.

When `--profile` is enabled in reth-bench-compare, the `samply`
feature is automatically added during compilation, enabling tracing
spans as markers in the samply profile.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -730,6 +730,7 @@ socket2 = { version = "0.5", default-features = false }
 sysinfo = { version = "0.33", default-features = false }
 tracing-journald = "0.3"
 tracing-logfmt = "0.3.3"
+tracing-samply = "0.1"
 tracing-subscriber = { version = "0.3", default-features = false }
 triehash = "0.8"
 typenum = "1.15.0"
