--- a/bin/reth/Cargo.toml
+++ b/bin/reth/Cargo.toml
@@ -87,6 +87,10 @@ otlp = [
     "reth-ethereum-cli/otlp",
     "reth-node-core/otlp",
 ]
+samply = [
+    "reth-ethereum-cli/samply",
+    "reth-node-core/samply",
+]
 js-tracer = [
     "reth-node-builder/js-tracer",
     "reth-node-ethereum/js-tracer",
