--- a/crates/tracing/Cargo.toml
+++ b/crates/tracing/Cargo.toml
@@ -26,7 +26,9 @@ tracing-logfmt.workspace = true
 clap = { workspace = true, features = ["derive"] }
 eyre.workspace = true
 rolling-file.workspace = true
+tracing-samply = { workspace = true, optional = true }
 
 [features]
 default = ["otlp"]
 otlp = ["reth-tracing-otlp"]
+samply = ["tracing-samply"]
