--- a/crates/engine/tree/Cargo.toml
+++ b/crates/engine/tree/Cargo.toml
@@ -115,6 +115,10 @@ harness = false
 name = "state_root_task"
 harness = false
 
+[[bench]]
+name = "state_provider_builder"
+harness = false
+
 [features]
 test-utils = [
     "reth-chain-state/test-utils",
