--- a/crates/tracing/Cargo.toml
+++ b/crates/tracing/Cargo.toml
@@ -21,14 +21,13 @@ tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "ansi"
 tracing-appender.workspace = true
 tracing-journald.workspace = true
 tracing-logfmt.workspace = true
+tracing-samply.workspace = true
 
 # misc
 clap = { workspace = true, features = ["derive"] }
 eyre.workspace = true
 rolling-file.workspace = true
-tracing-samply = { workspace = true, optional = true }
 
 [features]
 default = ["otlp"]
 otlp = ["reth-tracing-otlp"]
-samply = ["tracing-samply"]
