--- a/crates/trie/trie/Cargo.toml
+++ b/crates/trie/trie/Cargo.toml
@@ -110,3 +110,8 @@ harness = false
 name = "proof_v2"
 required-features = ["test-utils"]
 harness = false
+
+[[bench]]
+name = "multiproof_allocs"
+required-features = ["test-utils"]
+harness = false
