--- a/crates/stages/types/Cargo.toml
+++ b/crates/stages/types/Cargo.toml
@@ -13,6 +13,7 @@ workspace = true
 
 [dependencies]
 reth-codecs = { workspace = true, optional = true }
+reth-prune-types.workspace = true
 reth-trie-common.workspace = true
 alloy-primitives.workspace = true
 
@@ -38,6 +39,7 @@ default = ["std"]
 std = [
     "alloy-primitives/std",
     "bytes?/std",
+    "reth-prune-types/std",
     "reth-trie-common/std",
     "serde?/std",
 ]
