feat: stagging revm v34.0.0

--- a/crates/storage/errors/Cargo.toml
+++ b/crates/storage/errors/Cargo.toml
@@ -26,6 +26,7 @@ derive_more.workspace = true
 thiserror.workspace = true
 
 revm-database-interface.workspace = true
+revm-state.workspace = true
 
 [features]
 default = ["std"]
