chore(arbitrum): add arb-alloy-util dependency to node crate
Required for calculating retryable submission fee in retry tx generation.

--- a/crates/arbitrum/node/Cargo.toml
+++ b/crates/arbitrum/node/Cargo.toml
@@ -62,6 +62,7 @@ alloy-primitives.workspace = true
 alloy-rpc-types-engine.workspace = true
 alloy-rpc-types-eth.workspace = true
 arb-alloy-consensus.workspace = true
+arb-alloy-util.workspace = true
 alloy-eips.workspace = true
 
 alloy-consensus.workspace = true
