feat(arbitrum): implement zombie account tracking during execution
- Add reth-trie-common dependency for zombie_sink access
- Implement transfer_balance_with_zombie_tracking for zero-value transfers
- Add create_zombie_if_deleted to check if account was deleted and create zombie
- Add touch_account to explicitly create transition entries for accounts
- Track deleted empty accounts at end of each transaction
- Push zombie accounts to zombie_sink for preservation in state root computation
- Clear zombie_sink at block start to prevent cross-block persistence

--- a/crates/arbitrum/evm/Cargo.toml
+++ b/crates/arbitrum/evm/Cargo.toml
@@ -25,6 +25,7 @@ reth-primitives = { path = "../../primitives", default-features = false, feature
 reth-primitives-traits = { path = "../../primitives-traits", default-features = false, features = ["std"] }
 reth-arbitrum-primitives = { path = "../primitives", default-features = false, features = ["std", "serde", "reth-codec"] }
 reth-arbitrum-chainspec = { path = "../chainspec", default-features = false, features = ["std"] }
+reth-trie-common = { path = "../../trie/common", default-features = false, features = ["std"] }
 reth-rpc-eth-api = { path = "../../rpc/rpc-eth-api", default-features = false, optional = true }
 reth-arbitrum-payload = { path = "../payload", default-features = false, features = ["std"] }
 
