chore(arbitrum): add once_cell dependency for thread-local state

--- a/crates/arbitrum/evm/Cargo.toml
+++ b/crates/arbitrum/evm/Cargo.toml
@@ -68,3 +68,4 @@ alloy-rlp.workspace = true
 alloy-hardforks.workspace = true
 revm-context-interface.workspace = true
 tracing.workspace = true
+once_cell.workspace = true
