perf(trie): add FromIterator for HashedPostState and simplify from_bundle_state
Implements `FromIterator` and `FromParallelIterator` for `HashedPostState`, enabling
idiomatic `.collect()` usage and significantly simplifying the `from_bundle_state`
implementations.

## Changes

- Implement `FromIterator<(B256, Option<Account>, Option<HashedStorage>)>` for
  `HashedPostState`
- Implement `FromParallelIterator` for rayon support
- Simplify `from_bundle_state` from ~30 lines to ~10 lines by using `.collect()`
- Add comprehensive documentation highlighting key assumptions (unique addresses,
  non-empty storage)
- Add benchmark comparing parallel collection strategies

## Performance

Benchmarks show the collect-twice approach (parallel collect to Vec, then sequential
collect to HashedPostState) is 35-78% faster than fold-reduce with HashMaps:

```
Size      fold_reduce  collect_twice  Speedup
100       75 µs        53 µs          1.42x
1,000     331 µs       186 µs         1.78x
10,000    1.90 ms      1.28 ms        1.48x
50,000    10.40 ms     7.71 ms        1.35x
```

The parallel Vec collection leverages rayon's optimized internal implementation,
avoiding HashMap merge overhead and benefiting from better cache locality.

--- a/crates/trie/common/Cargo.toml
+++ b/crates/trie/common/Cargo.toml
@@ -136,3 +136,8 @@ rayon = ["dep:rayon"]
 [[bench]]
 name = "prefix_set"
 harness = false
+
+[[bench]]
+name = "hashed_state"
+harness = false
+required-features = ["rayon"]
