--- a/crates/evm/evm/Cargo.toml
+++ b/crates/evm/evm/Cargo.toml
@@ -21,8 +21,8 @@ reth-storage-errors.workspace = true
 reth-trie-common.workspace = true
 
 revm.workspace = true
-revm-bytecode.workspace = true
-revm-interpreter.workspace = true
+revm-bytecode = { workspace = true, optional = true }
+revm-interpreter = { workspace = true, optional = true }
 
 # alloy
 alloy-primitives.workspace = true
@@ -63,7 +63,7 @@ std = [
     "reth-trie-common/std",
     "reth-ethereum-primitives/std",
 ]
-metrics = ["std", "dep:metrics", "dep:reth-metrics"]
+metrics = ["std", "dep:metrics", "dep:reth-metrics", "dep:revm-bytecode", "dep:revm-interpreter"]
 test-utils = [
     "reth-primitives-traits/test-utils",
     "reth-trie-common/test-utils",
