--- a/crates/evm/evm/Cargo.toml
+++ b/crates/evm/evm/Cargo.toml
@@ -6,7 +6,7 @@ rust-version.workspace = true
 license.workspace = true
 homepage.workspace = true
 repository.workspace = true
-metadata.cargo-udeps.ignore = ["reth-ethereum"]
+metadata = { cargo-udeps = { ignore = ["reth-ethereum"] } }
 
 [lints]
 workspace = true
