Revert "Update lint.yml"
This reverts commit 818c899e331e2e13b19982d051703666b05a3ed9.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -183,7 +183,7 @@ jobs:
         with:
           cache-on-failure: true
       - uses: taiki-e/install-action@cargo-udeps
-      - run: cargo clean&&cargo udeps --workspace --lib --examples --tests --benches --all-features --locked
+      - run: cargo udeps --workspace --lib --examples --tests --benches --all-features --locked
 
   book:
     name: book
