--- a/crates/evm/evm/Cargo.toml
+++ b/crates/evm/evm/Cargo.toml
@@ -6,7 +6,9 @@ rust-version.workspace = true
 license.workspace = true
 homepage.workspace = true
 repository.workspace = true
-metadata = { cargo-udeps = { ignore = ["reth-ethereum"] } }
+
+[package.metadata.cargo-udeps.ignore]
+development = ["reth-ethereum"]
 
 [lints]
 workspace = true
