bench: add trie write batching micro-benchmark
Adds benchmark to measure the performance improvement from the locality-aware
storage trie write batching optimization.

--- a/crates/trie/db/Cargo.toml
+++ b/crates/trie/db/Cargo.toml
@@ -46,6 +46,11 @@ proptest.workspace = true
 proptest-arbitrary-interop.workspace = true
 serde_json.workspace = true
 similar-asserts.workspace = true
+criterion.workspace = true
+
+[[bench]]
+name = "trie_write_batching"
+harness = false
 
 [features]
 metrics = ["reth-trie/metrics"]
