feat(triedb): add init_genesis integration with feature gate
Implements TrieDB state root computation for genesis initialization.

Changes:
- Add compute_state_root_triedb() function for genesis state root computation
- Create TrieDBProviderFactory trait for clean provider access pattern
- Use feature gates to select between TrieDB and MDBX implementations

--- a/crates/cli/commands/Cargo.toml
+++ b/crates/cli/commands/Cargo.toml
@@ -106,6 +106,7 @@ tempfile.workspace = true
 
 [features]
 default = []
+triedb = ["reth-db-common/triedb"]
 arbitrary = [
     "dep:proptest",
     "dep:arbitrary",
