create pprof dump dir

--- a/crates/node/metrics/Cargo.toml
+++ b/crates/node/metrics/Cargo.toml
@@ -32,6 +32,7 @@ eyre.workspace = true
 jemalloc_pprof = { workspace = true, optional = true }
 mappings = { version = "0.7", optional = true }
 pprof_util = { version = "0.8", optional = true }
+reth-fs-util = { workspace = true, optional = true }
 tempfile = { workspace = true, optional = true }
 tikv-jemalloc-ctl = { workspace = true, optional = true, features = ["stats"] }
 
@@ -47,5 +48,5 @@ workspace = true
 
 [features]
 jemalloc = ["dep:tikv-jemalloc-ctl"]
-jemalloc-prof = ["jemalloc", "dep:jemalloc_pprof", "dep:mappings", "dep:pprof_util", "dep:tempfile"]
+jemalloc-prof = ["jemalloc", "dep:jemalloc_pprof", "dep:mappings", "dep:pprof_util", "dep:reth-fs-util", "dep:tempfile"]
 jemalloc-symbols = ["jemalloc-prof", "jemalloc_pprof?/symbolize"]
