--- a/bin/reth/Cargo.toml
+++ b/bin/reth/Cargo.toml
@@ -171,6 +171,8 @@ min-trace-logs = [
     "reth-node-core/min-trace-logs",
 ]
 
+storage-edge = ["reth-ethereum-cli/storage-edge"]
+
 [[bin]]
 name = "reth"
 path = "src/main.rs"
